# grpo-self-training

./: README.md  config.yaml  config_bt.yaml  config_bt_puhti.yaml  countdown_task.py  data_types.py  grpo.py  objects.py  optimizer.py  pyproject.toml  qwen2_model.py  tokenizer.py  train.py  train_sbatch_puhti.sh
custom_models/: qwen.py
evaluators/: flores_eval.py
generation_strategies/: beam_search.py  multinomial_sampling.py
objectives/: grpo.py
tasks/: backtranslation.py  countdown_task.py
